--- a/docker-janusgraph/janusgraph.properties
+++ b/docker-janusgraph/janusgraph.properties
@@ -1,5 +1,6 @@
 gremlin.graph=org.janusgraph.core.JanusGraphFactory
 storage.backend=cql
-storage.hostname=172.28.1.5
-#storage.directory=/var/lib/janusgraph/data
-#index.default.directory=/var/lib/janusgraph/index
+storage.hostname=127.0.0.1
+storage.username=username
+storage.password=superSecretPassword
+storage.port=9042
