Removing Scala Warnings and Adding Code Formatter

--- a/cytoscape-api/pom.xml
+++ b/cytoscape-api/pom.xml
@@ -57,6 +57,9 @@
                         </goals>
                         <configuration>
                             <args>
+                                <arg>-feature</arg>
+                                <arg>-unchecked</arg>
+                                <arg>-deprecation</arg>
                                 <arg>-dependencyfile</arg>
                                 <arg>${project.build.directory}/.scala_dependencies</arg>
                             </args>
