UP-633 & begining of UP-634

--- a/kafka-api/src/main/resources/application.conf
+++ b/kafka-api/src/main/resources/application.conf
@@ -1,35 +1,1 @@
-kafkaApi {
-
-  // slave or master
-  mode = "slave"
-
-  minTreeRecords = 10
-  //In Seconds
-  treeEvery = 60
-
-  kafkaConsumer {
-    //Comma-separeted values of IP/Hostname and ports
-    bootstrapServers = "localhost:9092"
-    topic = ["com.ubirch.eventlog.discovery"]
-    //If empty, a group id will be created.
-    groupId = "my group id"
-    // gracefulTimeout = 2 //In Seconds
-    maxPoolRecords = 500
-
-  }
-
-//  kafkaProducer {
-    //Comma-separeted values of IP/Hostname and ports
-//    bootstrapServers = "localhost:9092"
-//    topic = "com.ubirch.eventlog2"
-//    errorTopic = "com.ubirch.eventlog.error"
-
-//  }
-
-  metrics {
-    prometheus {
-      port = 5321
-    }
-  }
-
-}
+include "application.base.conf"
