--- a/kafka-api/src/main/resources/application.base.conf
+++ b/kafka-api/src/main/resources/application.base.conf
@@ -10,7 +10,8 @@ kafkaApi {
   kafkaConsumer {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
-    topic = ["com.ubirch.eventlog.discovery"]
+    // subscribe to topic "test" for... testing purposes
+    topic = ["com.ubirch.eventlog.discovery", "test"]
     //If empty, a group id will be created.
     groupId = "my group id"
     // gracefulTimeout = 2 //In Seconds
