UP-643: added error structure in kafka.util.ErrorsHandler: the errorHandler object takes an exception as an argument and produces a json string containing the name of the error and its message. Added config in application.base.conf necessary for the DefaultExpressDiscoveryApp

--- a/discovery-service-kafka-api/src/main/resources/application.base.conf
+++ b/discovery-service-kafka-api/src/main/resources/application.base.conf
@@ -11,10 +11,12 @@ kafkaApi {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
     // subscribe to topic "test" for... testing purposes
-    topic = "com.ubirch.eventlog.discovery, test"
+    topic = ["com.ubirch.eventlog.discovery", "test"]
     //If empty, a group id will be created.
     groupId = "my group id"
     // gracefulTimeout = 2 //In Seconds
+    errorTopic = "com.ubirch.eventlog.discovery-error"
+    gracefulTimeout = 2
     maxPoolRecords = 500
 
   }
@@ -23,12 +25,14 @@ kafkaApi {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
     errorTopic = "com.ubirch.eventlog.discovery-error"
+    topic = ["com.ubirch.eventlog.discovery", "test"]
+    gracefulTimeout = 2
 
   }
 
   metrics {
     prometheus {
-      port = 5321
+      port = 4321
     }
   }
 
