started working on helm charts

--- a/discovery-service-kafka-api/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka-api/src/main/resources/application-docker.conf
@@ -1,1 +1,31 @@
 include "application.base.conf"
+
+kafkaApi {
+
+  kafkaConsumer {
+    //Comma-separeted values of IP/Hostname and ports
+    bootstrapServers = ${DISC-ENV-KAFKA-BOOTSTRAP-CONS}
+    // subscribe to topic "test" for... testing purposes
+    topic = ["com.ubirch.eventlog.discovery", "test"]
+    //If empty, a group id will be created.
+    groupId = "my group id"
+    // gracefulTimeout = 2 //In Seconds
+    maxPoolRecords = 500
+
+  }
+
+  //  kafkaProducer {
+  //Comma-separeted values of IP/Hostname and ports
+  //    bootstrapServers = "localhost:9092"
+  //    topic = "com.ubirch.eventlog2"
+  //    errorTopic = "com.ubirch.eventlog.error"
+
+  //  }
+
+  metrics {
+    prometheus {
+      port = 5321
+    }
+  }
+
+}
