--- a/discovery-service-kafka-api/src/main/resources/application.base.conf
+++ b/discovery-service-kafka-api/src/main/resources/application.base.conf
@@ -11,7 +11,7 @@ kafkaApi {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
     // subscribe to topic "test" for... testing purposes
-    topic = ["com.ubirch.eventlog.discovery", "test"]
+    topic = "com.ubirch.eventlog.discovery, test"
     //If empty, a group id will be created.
     groupId = "my group id"
     // gracefulTimeout = 2 //In Seconds
@@ -25,7 +25,7 @@ kafkaApi {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
     errorTopic = "com.ubirch.eventlog.discovery-error"
-    topic = ["com.ubirch.eventlog.discovery", "test"]
+    topic = "com.ubirch.eventlog.discovery, test"
     gracefulTimeout = 2
 
   }
