UP-614 made configuration values into env variables when possible/needed, added helm charts

--- a/discovery-service-kafka-api/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka-api/src/main/resources/application-docker.conf
@@ -4,27 +4,31 @@ kafkaApi {
 
   kafkaConsumer {
     //Comma-separeted values of IP/Hostname and ports
-    bootstrapServers = ${DISC-ENV-KAFKA-BOOTSTRAP-CONS}
+    bootstrapServers = ${DISC_ENV_KAFKA_CONS_BOOTSTRAP}
     // subscribe to topic "test" for... testing purposes
-    topic = ["com.ubirch.eventlog.discovery", "test"]
+    topic = ${DISC_ENV_KAFKA_CONS_TOPIC}
     //If empty, a group id will be created.
-    groupId = "my group id"
-    // gracefulTimeout = 2 //In Seconds
-    maxPoolRecords = 500
+    groupId = ${DISC_ENV_KAFKA_CONS_GROUPID}
+
+    errorTopic = DISC_ENV_KAFKA_CONS_ERRORTOPIC
+    gracefulTimeout = DISC_ENV_KAFKA_CONS_TIMEOUT
+    maxPoolRecords = DISC_ENV_KAFKA_CONS_POOLREC
+
 
   }
 
-  //  kafkaProducer {
-  //Comma-separeted values of IP/Hostname and ports
-  //    bootstrapServers = "localhost:9092"
-  //    topic = "com.ubirch.eventlog2"
-  //    errorTopic = "com.ubirch.eventlog.error"
+  kafkaProducer {
+    //Comma-separeted values of IP/Hostname and ports
+    bootstrapServers = DISC_ENV_KAFKA_PROD_BOOTSTRAP
+    errorTopic = DISC_ENV_KAFKA_PROD_ERRORTOPIC
+    topic = DISC_ENV_KAFKA_PROD_TOPIC
+    gracefulTimeout = DISC_ENV_KAFKA_PROD_TIMEOUT
 
-  //  }
+  }
 
   metrics {
     prometheus {
-      port = 5321
+      port = DISC_ENV_KAFKA_PROMETHEUS
     }
   }
 
