--- a/helm-charts/discovery-service/values.dev.yaml
+++ b/helm-charts/discovery-service/values.dev.yaml
@@ -10,6 +10,34 @@ discovery-service:
   kafkaURL: "kafka.core-dev.svc.cluster.local:9092" #TOASK
   redisSecretName: "redis-secrets" #TOASK
   serverUuid: "9d3c78ff-22f3-4441-a5d1-85c636d486ff" #TOASK
+  env:
+    - name: STAGE_DISC_ENV_KAFKA_CONS_BOOTSTRAP
+      value: "localhost:9092"
+    - name: STAGE_DISC_ENV_KAFKA_CONS_TOPIC
+      value:  "com.ubirch.eventlog.discovery, test"
+    - name: STAGE_DISC_ENV_KAFKA_CONS_GROUPID
+      value: "my group id"
+    - name: STAGE_DISC_ENV_KAFKA_CONS_ERRORTOPIC
+      value: "com.ubirch.eventlog.discovery-error"
+    - name: STAGE_DISC_ENV_KAFKA_CONS_TIMEOUT
+      value: 2
+    - name: STAGE_DISC_ENV_KAFKA_CONS_POOLREC
+      value: 500
+    - name: STAGE_DISC_ENV_KAFKA_PROD_BOOTSTRAP
+      value: "localhost:9092"
+    - name: STAGE_DISC_ENV_KAFKA_PROD_ERRORTOPIC
+      value: "com.ubirch.eventlog.discovery-error"
+    - name: STAGE_DISC_ENV_KAFKA_PROD_TOPIC
+      value: "com.ubirch.eventlog.discovery, test"
+    - name: STAGE_DISC_ENV_KAFKA_PROD_TIMEOUT
+      value: 2
+    - name: STAGE_DISC_ENV_KAFKA_PROMETHEUS
+      value: 4321
+    - name: STAGE_DISC_ENV_CORE_HOSTS
+      value: [192.168.14.161]
+    - name: STAGE_DISC_ENV_CORE_PORT
+      value: 8182
+
 
 redis:
   masterURL: "redis-stable-master.core-dev.svc.cluster.local:6379" #TOASK
