Conf files proposal

--- a/discovery-service-kafka-api/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka-api/src/main/resources/application-docker.conf
@@ -1,5 +1,15 @@
 include "application.base.conf"
 
+core {
+
+  connector {
+
+    hosts = ${DISC_ENV_CORE_ADDR}
+    port = ${DISC_ENV_CORE_PORT}
+
+  }
+}
+
 kafkaApi {
 
   kafkaConsumer {
@@ -10,25 +20,25 @@ kafkaApi {
     //If empty, a group id will be created.
     groupId = ${DISC_ENV_KAFKA_CONS_GROUPID}
 
-    errorTopic = DISC_ENV_KAFKA_CONS_ERRORTOPIC
-    gracefulTimeout = DISC_ENV_KAFKA_CONS_TIMEOUT
-    maxPoolRecords = DISC_ENV_KAFKA_CONS_POOLREC
+    errorTopic = ${DISC_ENV_KAFKA_CONS_ERRORTOPIC}
+    gracefulTimeout = ${DISC_ENV_KAFKA_CONS_TIMEOUT}
+    maxPoolRecords = ${DISC_ENV_KAFKA_CONS_POOLREC}
 
 
   }
 
   kafkaProducer {
     //Comma-separeted values of IP/Hostname and ports
-    bootstrapServers = DISC_ENV_KAFKA_PROD_BOOTSTRAP
-    errorTopic = DISC_ENV_KAFKA_PROD_ERRORTOPIC
-    topic = DISC_ENV_KAFKA_PROD_TOPIC
-    gracefulTimeout = DISC_ENV_KAFKA_PROD_TIMEOUT
+    bootstrapServers = ${DISC_ENV_KAFKA_PROD_BOOTSTRAP}
+    errorTopic = ${DISC_ENV_KAFKA_PROD_ERRORTOPIC}
+    topic = ${DISC_ENV_KAFKA_PROD_TOPIC}
+    gracefulTimeout = ${DISC_ENV_KAFKA_PROD_TIMEOUT}
 
   }
 
   metrics {
     prometheus {
-      port = DISC_ENV_KAFKA_PROMETHEUS
+      port = ${DISC_ENV_KAFKA_PROMETHEUS}
     }
   }
 
