--- a/discovery-service-kafka-api/src/main/resources/application.base.conf
+++ b/discovery-service-kafka-api/src/main/resources/application.base.conf
@@ -1,11 +1,22 @@
+core {
+
+  connector {
+
+    hosts = 192.168.14.161
+    port = 8182
+
+    serializer {
+      className = org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0
+      config {
+        ioRegistries = [org.janusgraph.graphdb.tinkerpop.JanusGraphIoRegistry]
+      }
+    }
+
+
+  }
+}
+
 kafkaApi {
-
-  // slave or master
-  mode = "slave"
-
-  minTreeRecords = 10
-  //In Seconds
-  treeEvery = 60
 
   kafkaConsumer {
     //Comma-separeted values of IP/Hostname and ports
