--- a/discovery-service-docker-jg/janusgraph.properties
+++ b/discovery-service-docker-jg/janusgraph.properties
@@ -86,3 +86,5 @@ cache.db-cache-size = 0.25
 # Data Type:  class java.lang.String[]
 # Mutability: LOCAL
 storage.hostname=172.28.1.5
+storage.username=username
+storage.password=superSecretPassword
