--- a/discovery-service-docker-jg/pom.xml
+++ b/discovery-service-docker-jg/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.ubirch.discovery</groupId>
         <artifactId>discovery-service</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <!-- basic info -->
