--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- parent pom -->
     <groupId>com.ubirch.discovery</groupId>
     <artifactId>discovery-service</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <organization>
