--- a/helm-charts/discovery-service/values.dev.yaml
+++ b/helm-charts/discovery-service/values.dev.yaml
@@ -27,6 +27,12 @@ discoveryservice:
     hosts: "[192.168.14.161]"
     port: 8182
 
+janusgraph:
+  image: ubirch/janusgraph
+  tag: "0.0.2"
+  pullPolicy: IfNotPresent
+  replicaCount: 1
+
 redis:
   masterURL: "redis-stable-master.core-dev.svc.cluster.local:6379"
   slaveURL: "redis-stable-slave.core-dev.svc.cluster.local:6379"
