UP-642 updated helm charts

--- a/discovery-service-docker-jg/janusgraph.properties
+++ b/discovery-service-docker-jg/janusgraph.properties
@@ -85,6 +85,9 @@ cache.db-cache-size = 0.25
 # Default:    127.0.0.1
 # Data Type:  class java.lang.String[]
 # Mutability: LOCAL
+metrics.jmx.enabled = true
+metrics.jmx.domain=janusgraph
+
 storage.hostname=172.28.1.5
 storage.username=username
 storage.password=superSecretPassword
