--- a/discovery-service-docker-jg/conf/gremlin-server.yaml
+++ b/discovery-service-docker-jg/conf/gremlin-server.yaml
@@ -5,6 +5,8 @@ channelizer: org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer
 graphs: {
   graph: conf/gremlin-server/janusgraph-cql-server.properties
 }
+plugins:
+  - janusgraph.imports
 scriptEngines: {
   gremlin-groovy: {
     plugins: { org.janusgraph.graphdb.tinkerpop.plugin.JanusGraphGremlinPlugin: {},
