--- a/helm-charts/discovery-service/templates/service.yaml
+++ b/helm-charts/discovery-service/templates/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kafka-api.fullname" . }}
+  name: {{ include "discovery-service.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "kafka-api.name" . }}
-    helm.sh/chart: {{ include "kafka-api.chart" . }}
+    app.kubernetes.io/name: {{ include "discovery-service.name" . }}
+    helm.sh/chart: {{ include "discovery-service.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - name: prometheus-metrics
       port: 4321
@@ -17,5 +17,5 @@ spec:
       port: 9010
       protocol: TCP
   selector:
-    app.kubernetes.io/name: {{ include "kafka-api.name" . }}
+    app.kubernetes.io/name: {{ include "discovery-service.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
