UP-647 added a test structure for the kafka module, started to add more tests Fixed some errors discovered through testing

--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,7 @@
 
         <!-- /Scalatra -->
 
-        <!-- Javax serverlet -->
+        <!-- Javax servlet -->
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -204,7 +204,7 @@
             <version>${javaxServlet.version}</version>
         </dependency>
 
-        <!-- /Javax serverlet -->
+        <!-- /Javax servlet -->
 
         <!-- Json4s -->
 
