--- a/helm-charts/discovery-service-kafka/templates/deployment.yaml
+++ b/helm-charts/discovery-service-kafka/templates/deployment.yaml
@@ -1,10 +1,14 @@
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: {{ include "discovery-service.fullname" . }}
+  name: {{ template "thischart.fullname" . }}
   namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: {{ template "thischart.name" . }}
+      release: {{ .Release.Name }}
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -13,12 +17,12 @@ spec:
   template:
     metadata:
       labels:
-        app: responder-svc
-        env: {{ .Values.environment }}
+        app: {{ template "thischart.name" . }}
+        release: {{ .Release.Name }}
     spec:
       containers:
         - name: responder-svc
-          image: "ubirch/responder:{{ .Values.image.tag | default "latest" }}"
+          image: "ubirch/discovery-service-kafka:{{ .Values.image.tag | default "latest" }}"
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -42,31 +46,31 @@ spec:
             periodSeconds: 60
           env:
             - name: DISC_ENV_KAFKA_CONS_BOOTSTRAP
-              value: {{ .Values.discoveryservice.kafka.bootstrapServers }}
+              value: {{ .Values.discoveryservice.kafka.bootstrapServers | quote }}
             - name: DISC_ENV_KAFKA_CONS_TOPIC
-              value: {{ .Values.discoveryservice.kafka.consumer.topics }}
+              value: {{ .Values.discoveryservice.kafka.consumer.topics | quote }}
             - name: DISC_ENV_KAFKA_CONS_GROUPID
-              value: {{ .Values.discoveryservice.kafka.consumer.group }}
+              value: {{ .Values.discoveryservice.kafka.consumer.group | quote }}
             - name: DISC_ENV_KAFKA_CONS_ERRORTOPIC
-              value: {{ .Values.discoveryservice.kafka.consumer.errorTopic }}
+              value: {{ .Values.discoveryservice.kafka.consumer.errorTopic | quote }}
             - name: DISC_ENV_KAFKA_CONS_TIMEOUT
-              value: {{ .Values.discoveryservice.kafka.timeout }}
+              value: {{ .Values.discoveryservice.kafka.timeout | quote }}
             - name: DISC_ENV_KAFKA_CONS_POOLREC
-              value: {{ .Values.discoveryservice.kafka.consumer.poolRecords }}
+              value: {{ .Values.discoveryservice.kafka.consumer.poolRecords | quote }}
             - name: DISC_ENV_KAFKA_PROD_BOOTSTRAP
-              value: {{ .Values.discoveryservice.kafka.bootstrapServers }}
+              value: {{ .Values.discoveryservice.kafka.bootstrapServers | quote }}
             - name: DISC_ENV_KAFKA_PROD_ERRORTOPIC
-              value: {{ .Values.discoveryservice.kafka.producer.errorTopic }}
+              value: {{ .Values.discoveryservice.kafka.producer.errorTopic | quote }}
             - name: DISC_ENV_KAFKA_PROD_TOPIC
-              value: {{ .Values.discoveryservice.kafka.producer.topics }}
+              value: {{ .Values.discoveryservice.kafka.producer.topics | quote }}
             - name: DISC_ENV_KAFKA_PROD_TIMEOUT
-              value: {{ .Values.discoveryservice.kafka.timeout }}
+              value: {{ .Values.discoveryservice.kafka.timeout | quote }}
             - name: DISC_ENV_KAFKA_PROMETHEUS
-              value: {{ .Values.discoveryservice.prometheus.port }}
+              value: {{ .Values.discoveryservice.prometheus.port | quote }}
             - name: DISC_ENV_CORE_HOSTS
-              value: {{ .Values.discoveryservice.core.hosts }}
+              value: {{ .Values.discoveryservice.core.hosts | quote }}
             - name: DISC_ENV_CORE_PORT
-              value: {{ .Values.discoveryservice.core.port }}
+              value: {{ .Values.discoveryservice.core.port | quote }}
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
